--- a/src/app/pages/todo/todo.css
+++ b/src/app/pages/todo/todo.css
@@ -22,7 +22,7 @@
   transform: translateY(-2px);
 }
 
-h2 {
+body:not(.light-mode) h2 {
   text-align: center;
   margin-bottom: 30px;
   font-size: 2rem;
